--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,7 +11,7 @@
     </ion-item>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        &nbsp;&nbsp; <ion-icon name="{{p.icon}}"  color="danger"></ion-icon>&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp; <ion-icon name="{{p.icon}}"  color="goldenBrown"></ion-icon>&nbsp;&nbsp;&nbsp;&nbsp;
         {{p.title}}
       </button>
     </ion-list>
