--- a/src/pages/notifications/notifications.scss
+++ b/src/pages/notifications/notifications.scss
@@ -138,7 +138,7 @@ page-notifications {
 	}
     .cover {
 		// border-radius: 0px 0px 0px 150px !important;
-		 background: url('../../assets/imgs/coverSub.jpg') no-repeat center center fixed;
+		 background: url('assets/imgs/coverSub.jpg') no-repeat center center fixed;
         position: relative;
         width: 100%;
         -webkit-background-size: cover;
