--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -29,9 +29,16 @@ page-profile {
 		height: 18vw;
 	}
 
+.icon{
+	font-size:70px;
+	text-align:right;
+}
+
 .contactUs {
 	background-color: #EEF1EF;
 	padding:15px;
+	pading-top:50px;
+	padding-bottom:50px;
 	max-height:400px;
 
 	img{
