updates functionality time & minor design Revisions

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <ion-menu [content]="content" *ngIf="checkApp" >
   <ion-header>
     <ion-toolbar color="brownLight" class="menuHeader">
-     <img src="assets/imgs/logoBlack.png" alt="">
+     <img src="assets/imgs/logoBrown.png" alt="">
     </ion-toolbar>
   </ion-header>
 
@@ -21,9 +21,9 @@
 
 
 <ion-header class="header header-md" *ngIf="!checkApp" color="goldenBrown">
-  <div color="goldenBrown" class="first-header">
+  <div color="goldenBrown" class="first-header headerDeskColor">
     <div>
-      <ion-row color=""
+      <ion-row color="goldenBrown"
        >
         <p style="padding: 10px;margin:0 !important;width:150px;"> <ion-icon name="call"></ion-icon> (+088) 589-8745</p>
         <p style="padding: 10px;margin:0;width:300px"> <ion-icon name="time"></ion-icon> Opening Hours: 8:00am - 11:30pm</p>
