--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -25,21 +25,12 @@ ion-toolbar {
 		 font-family: 'Cookie Curvy' !important;
 	}
 
-.contact{
-    padding-top:5.8vw;
-}
-
 .Kusina {
          font-family: 'Ge Body' !important;
     }
 
 .black{
     background-color:black;
-}
-
-.first-header{
-    height:px !important;
-    background-color: #C49433 !important;
 }
 
 	.fonty {
@@ -59,17 +50,17 @@ ion-toolbar {
     //padding-left: calc((100% - 1100px)/ 2);
     // background: #f53d3d;
     // background: transparent;
-    color: white !important;
+    color: black !important;
+}
+.headerDeskColor {
+    color: #ffffff;
+     background:#C49433 !important;
 }
 .logo {
     display: inline-flex;
 }
 .first-section {
     padding: 30px 20px 20px 20px;
-}
-
-.first-section2 {
-    padding: 0px 20px 20px 20px;
 }
 
 .second {
@@ -142,9 +133,5 @@ ion-toolbar {
 			}
 		}
     }
-    .iconFont {
-        top: 2px !important;
-		position: relative !important;
-		margin-right: 0px !important;
-	}
+   
 	
