--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -274,7 +274,8 @@ page-settings {
                     font-weight: bold;
                 }
 			}
-		}
+        }
+        .contentPadding { };
 		.alarmIcon {
 			font-size: 6rem;
 		}
