Auto stash before merge of "master" and "origin/master"

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -26,7 +26,7 @@
       <ion-row color="goldenBrown"
        >
         <p style="padding: 10px;margin:0 !important;width:150px;"> <ion-icon name="call"></ion-icon> (+088) 589-8745</p>
-        <p style="padding: 10px;margin:0;width:300px"> <ion-icon name="time"></ion-icon> Opening Hours: 8:00am - 11:30pm</p>
+        <p style="padding: 10px;margin:0;width:300px"> <ion-icon name="time"></ion-icon> Business Hours: 8:00am - 11:30pm</p>
       <!-- <ion-buttons style="margin-right:0;" class="bar-buttons bar-buttons-md">
       <button color="" ion-button="" *ngFor="let p of pagesDesk"
         class="bar-button bar-button-md bar-button-default bar-button-default-md">
