--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -63,6 +63,14 @@ ion-toolbar {
     padding: 30px 20px 20px 20px;
 }
 
+.footer{
+  background-color:#EEF1EF;  
+}
+
+.first-section2 {
+    padding: 0px 20px 20px 20px;
+}
+
 .second {
     padding: 120px 20px 0px 20px;
 }
