--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -26,7 +26,9 @@ page-profile {
 .cover2 {
 		background-color: black;
 		box-shadow: -200px -35px 75px -51px rgba(0,0,0,0.75);
-		height: 18vw;
+		height: 20vw;
+		max-height:500px;
+		min-height:300px;
 	}
 
 .icon{
