Adjusted the navigation bar

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -45,10 +45,10 @@
       <!-- <button ion-button menuToggle>
         <ion-icon name="menu" class="bar-header"></ion-icon>
       </button> -->
-      <img src="assets/imgs/logoName.png" height="60px;">
+      <img src="assets/imgs/logoName.png" height="60px;" style="margin-left:100px;">
       <!-- <ion-title style="color: red !important;">Kusina Filipina</ion-title> -->
     
-    <ion-buttons end="" margin-left="" class="bar-buttons bar-buttons-md">
+    <ion-buttons end="" margin-left="" class="bar-buttons bar-buttons-md" style="margin-right:100px;">
       <button color="" ion-button="" *ngFor="let p of pagesDesk" (click)="openPage(p)"
         class="bar-button bar-button-md bar-button-default bar-button-default-md">
         <span class="">{{p.title}}</span>
