Adjusted spacing in Contact Us page

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -74,6 +74,11 @@ ion-toolbar {
 .second {
     padding: 120px 20px 0px 20px;
 }
+
+.third{
+    padding: 30px 20px 0px 20px;
+}
+
 .padding-all { 
      padding-right: calc((100% - 1440px)/ 2);
     padding-left: calc((100% - 1440px)/ 2);
@@ -86,6 +91,30 @@ ion-toolbar {
      margin-left: 8px;
      margin-right: 8px;
  }
+
+  hr {
+        margin-top: 0px !important;
+        margin-bottom: 20px !important;
+        margin-left:0px !important;
+        width: 20% !important;
+        height: 3px !important;
+        background: #C49433 !important;
+        text-align:left;
+        border-radius: 20px !important;
+    }
+
+ .contactUs {
+    background-color: #EEF1EF;
+    padding:15px;
+    pading-top:50px;
+    padding-bottom:50px;
+    max-height:400px;
+
+    img{
+        padding-top:5px;
+        height:370px;
+    }
+}
 
  .bar-button:hover, .MenuTitle:hover {
      color:#C49433 !important;
