--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -114,6 +114,17 @@ page-profile {
 		width: 100% !important;
 	}
 
+	hr {
+        margin-top: 0px !important;
+        margin-bottom: 20px !important;
+        margin-left:0px !important;
+        width: 20% !important;
+        height: 3px !important;
+        background: #C49433 !important;
+        text-align:left;
+        border-radius: 20px !important;
+    }
+
 	.card-content-md{
 		padding: 5px 16px !important;
 	}
