--- a/src/pages/notifications/notifications.scss
+++ b/src/pages/notifications/notifications.scss
@@ -328,6 +328,7 @@ page-notifications {
 					font-size: 1.2rem;
 					width: 20vw;
 					margin-top: 5px !important;
+                    margin-left: 10px;
 				}		
 			}
 		}		
