--- a/src/pages/gallery-tabs/gallery-tabs.scss
+++ b/src/pages/gallery-tabs/gallery-tabs.scss
@@ -363,6 +363,7 @@ page-gallery-tabs {
 					font-size: 1.2rem;
 					width: 20vw;
 					margin-top: 5px !important;
+                    margin-left: 10px;
 				}		
 			}
 		}		
@@ -456,7 +457,6 @@ page-gallery-tabs {
     //                 width: 100%;
     //                 border-radius: 8px 8px 0px 0px;
     //                 position: absolute;
-    //                 background: linear-gradient(to bottom, rgba(42,34,45, 1) 30%,rgba(169, 127, 184, 0.3) 100%);
     //                 color: rgb(255, 255, 255) !important;
     //                 font-size: 1.8rem;
     //                 padding: 10px 0px;
@@ -532,5 +532,53 @@ page-gallery-tabs {
     .emph {
         text-decoration: underline;
         color: #d32323;
+    }
+    .cover2 {
+		border-radius: 0px 0px 0px 150px !important;
+		// background-image: url("assets/");
+		position: relative;
+		box-shadow: -200px -35px 75px -51px rgba(0,0,0,0.75);
+		border: .5px solid black;
+        // height: 40vh;
+        img {
+                max-height: 52vw;
+    width: 100%;
+        }
+    }
+    	.welcome{
+		position: absolute;
+		left: 0;
+		right: 0;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 150px;
+		width: 500px;
+	}.welcomeText {
+		font-size: 4rem !important;
+		margin: 0px auto;
+		font-weight: 500;
+    }
+    .texts2 {
+		position: absolute;
+		left: 0;
+		right: 0;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 250px;
+		width: 500px;
+		text-align: center;
+		border: 5px solid white;
+		padding:20px;
+    }
+    .deskList {
+        width: 100%;
+        .deskListData {
+            text-align: center;
+            .deskLister {
+            display: inline-flex !important;
+                margin: 0 auto
+
+            }
+        }
     }
 }
