--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -367,7 +367,8 @@ page-settings {
 				.eatSubText {
 					font-size: 1.2rem;
 					width: 20vw;
-					margin-top: 5px !important;
+                    margin-top: 5px !important;
+                    margin-left: 10px;
 				}		
 			}
 		}		
