Redesign gallery page

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -71,6 +71,10 @@ ion-toolbar {
   background-color:#EEF1EF;  
 }
 
+.deskBrder {
+        border: 2px solid black;
+    }
+
 .first-section2 {
     padding: 0px 20px 20px 20px;
 }
