--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -193,6 +193,7 @@ page-news {
 		height: 20vw;
 		padding: 10px;
 		margin:0px;
+		margin-left: 40px;
 		width: 100%;
 		img {
 			max-height: 40vw !important;
