--- a/src/app/app.html
+++ b/src/app/app.html
@@ -16,7 +16,6 @@
       </button>
     </ion-list>
   </ion-content>
-
 </ion-menu>
 
 
@@ -25,8 +24,8 @@
     <div>
       <ion-row color="goldenBrown"
        >
-        <p style="padding: 10px;margin:0 !important;width:150px;"> <ion-icon name="call"></ion-icon> (+088) 589-8745</p>
-        <p style="padding: 10px;margin:0;width:300px"> <ion-icon name="time"></ion-icon> Business Hours: 8:00am - 11:30pm</p>
+        <p style="padding: 10px;margin:0 !important;width:200px;"> <ion-icon name="call" style="margin-right:8px !important;margin-left:20px !important;"></ion-icon> (+088) 589-8745</p>
+        <p style="padding: 10px;margin:0;width:300px"> <ion-icon  style="margin-right:8px !important;" name="time"></ion-icon> Business Hours: 8:00am - 11:30pm</p>
       <!-- <ion-buttons style="margin-right:0;" class="bar-buttons bar-buttons-md">
       <button color="" ion-button="" *ngFor="let p of pagesDesk"
         class="bar-button bar-button-md bar-button-default bar-button-default-md">
