--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -22,6 +22,9 @@ page-profile {
       margin: 0 auto;
        box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
   }
+  .map-col{
+  	padding:0px !important;
+  }
 
 .cover2 {
 		background-color: black;
