--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -32,3 +32,17 @@
    font-weight: 100;
    font-style: normal;
  }
+
+  @font-face {
+   font-family: 'PT-Sans - Bold';
+   src: url('../assets/fonts/PTSans-Bold.ttf');
+   font-weight: 100;
+   font-style: normal;
+ }
+
+   @font-face {
+   font-family: 'PT-Sans';
+   src: url('../assets/fonts/PTSans-Regular.ttf');
+   font-weight: 100;
+   font-style: normal;
+ }
