--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -140,6 +140,36 @@ page-news {
 		font-weight: 700;
 		font-size: 3.5rem;
 	}
+
+	.ftrLine {
+        margin-top: 0px !important;
+        margin-bottom: 20px !important;
+        margin-left:0px !important;
+        width: 20% !important;
+        height: 3px !important;
+        background: #C49433 !important;
+        text-align:left;
+        border-radius: 20px !important;
+    }
+	.slidesContainer {
+		position: relative;
+		.leftButton, .rightButton {
+			position: absolute;
+			z-index: 99999;
+			bottom: 200px;
+			font-size: 10rem;
+			color: #C49433 !important;
+			font-weight: bold;
+			background: none !important;
+		}
+			.rightButton {
+				
+				right: -5vw;
+			}
+			.leftButton {
+				left: -5vw;
+			}
+	}
 	 .iconFont {
         top: 2px !important;
 		position: relative !important;
@@ -214,16 +244,39 @@ page-news {
 		margin:0px;
 		margin-left: 40px;
 		width: 100%;
+		position: relative;
 		img {
 			border: 2px solid #c2c0c0;
-			box-shadow: 0 10px 6px -6px rgba(211, 35, 35,0.75);
+			box-shadow: 0 10px 6px -6px rgb(196,148,51); 
 			max-height: 40vw !important;
 			min-height: vh !important;
 			width: 100%;
 			max-width: 400px;
 		}
+		.subtitle2 {
+			position: absolute;
+			bottom: 0;
+			right: 0;
+			margin-bottom: -10vw;
+			// margin-left: 2px;
+			// font-family: 'Crete Round',Georgia,'Times New Roman',serif;
+			width: 100%;
+			// background: rgba(0, 0, 0, 0.5);
+			border-radius: 0px 5px 0px 0px;
+			text-align: center;
+			color: #ffffff;
+         	// background: linear-gradient(to top, rgba(42,34,45, 0.6) 10%,rgba(29, 29, 29, 0) 100%);
+			// top: 75px;
+			h6 {
+				font-weight: bold !important;
+				font-size: 2rem !important;
+				padding-bottom: 5vw;
+			}
+		}
 	}
-
+	.contentLessSpace {
+		padding: 0px 20px 50px 20px !important;
+	}
 	.category{
 		
 		height:25vw !important;
@@ -352,9 +405,13 @@ page-news {
 		margin-bottom: 10px;
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 		.slides {
+			
+			padding: 10px;
+			// border: 1px solid black;
 			.slidesCard {
 				width: 100%;
 				display: inline-flex;
+				padding: 20px;
 				div {
 					margin-top: 10px;
 					width: 100%;
@@ -403,14 +460,29 @@ page-news {
 	.slidesHolder2 {
 		margin-bottom: 10px;
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+		position: relative;
+		// .buttonNav {
+		// 	right: 0;
+		// 	bottom: 0;
+		// 	background: black;
+		// }
 		.slides2 {
+			overflow: hidden;
 			.slidesCard2 {
 				width: 100%;
 				display: inline-flex;
 				div {
 					margin-top: 10px;
-					width: 100%;
+					margin-left: 10px;
+					width: 90%;
+					padding: 10px;
 					text-align: center;
+					div {
+						border: .5px solid rgba(0, 0, 0, 0.116);	
+						box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.212); 
+						padding: 20px;
+						border-radius: 5px;
+					}
 					p {
 						padding: 10px;
 						margin: 0 auto;
@@ -449,6 +521,7 @@ page-news {
 							color: rgb(196,148,51); 
 						}
 					}
+					
 				}
 			}
 		}
@@ -485,7 +558,7 @@ page-news {
 		transition: .5s;
 	}
 	.text-menu {
-		padding: 10px 20px 20px 35px;
+		padding: 10px 20px 20px 20px;
 	}
 .colinline{
 		display: inline-block;
