--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -148,7 +148,7 @@ ion-toolbar {
 		 font-family: 'Cookie Curvy';
 	 }
 	.headFont {
-		font-family: 'PT-Sans',sans-serif !important;
+		font-family: 'Josef Sans' !important;
     }
     .footerSect {
         background: rgba(184, 184, 184, 0.11);
